# osquery

./: .gitmodules  CMakeLists.txt  azure-pipelines.yml
libraries/cmake/source/dbus/: CMakeLists.txt
libraries/cmake/source/expat/: CMakeLists.txt
libraries/cmake/source/modules/: Finddbus.cmake  Findsystemd.cmake
libraries/cmake/source/systemd/: CMakeLists.txt
osquery/remote/: http_client.cpp
osquery/tables/system/: CMakeLists.txt
osquery/tables/system/darwin/: system_extensions.mm
osquery/tables/system/linux/: startup_items.cpp
specs/darwin/: system_extensions.table
